
  [ Ben Hutchings ]
  * [amd64] KVM: bit-ops emulation ignores offset on 64-bit (Closes: #818502)
  * linux-headers: Avoid mixed implicit and normal rules in Makefile, thanks to
    Thierry Herbelot (Closes: #822666)
  * Revert "libata: Align ata_device's id on a cacheline" to avoid ABI change
  * Revert "net/ipv6: add sysctl option accept_ra_min_hop_limit" to avoid ABI
    change

 -- Ben Hutchings <ben@decadent.org.uk>  Sat, 30 Apr 2016 22:07:22 +0200

linux (3.16.7-ckt25-2) jessie; urgency=medium

  * Revert "drm/radeon: hold reference to fences in radeon_sa_bo_new"
    (Closes: #819881)
  * Revert "drm/radeon: call hpd_irq_event on resume", reported to cause
    regressions (crash/hang) on some systems
  * Revert "usb: hub: do not clear BOS field during reset device"
    (Closes: #820176)

 -- Ben Hutchings <ben@decadent.org.uk>  Fri, 08 Apr 2016 11:51:23 +0100

linux (3.16.7-ckt25-1) jessie; urgency=medium

  * New upstream stable update:
    http://kernel.ubuntu.com/stable/ChangeLog-3.16.7-ckt21
    - irda: precedence bug in irlmp_seq_hb_idx()
    - macvtap: unbreak receiving of gro skb with frag list
    - RDS-TCP: Recover correctly from pskb_pull()/pksb_trim() failure in
      rds_tcp_data_recv
    - stmmac: Correctly report PTP capabilities.
    - ipmr: fix possible race resulting from improper usage of IP_INC_STATS_BH()
      in preemptible context.
    - sit: fix sit0 percpu double allocations
    - packet: race condition in packet_bind
    - net: avoid NULL deref in inet_ctl_sock_destroy()
    - net: fix a race in dst_release()
    - Failing to send a CLOSE if file is opened WRONLY and server reboots on a
      4.x mount
    - [x86] xen: Do not clip xen_e820_map to xen_e820_map_entries when
      sanitizing map
    - HID: core: Avoid uninitialized buffer access
    - [media] v4l2-compat-ioctl32: fix alignment for ARM64
    - [armhf] net: mvneta: Fix CPU_MAP registers initialisation
    - mtd: mtdpart: fix add_mtd_partitions error path