@@ -151,6 +151,7 @@ linux (3.16.7-ckt27-1) UNRELEASED; urgency=medium
   * Revert "libata: Align ata_device's id on a cacheline" to avoid ABI change
   * Revert "net/ipv6: add sysctl option accept_ra_min_hop_limit" to avoid ABI
     change
+  * stable-update: Rewrite stable-update.sh in Python
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sat, 30 Apr 2016 22:07:22 +0200
 
